feat(condo): DOMA-11559 update tour guide

--- a/apps/condo/lang/en/en.json
+++ b/apps/condo/lang/en/en.json
@@ -3396,45 +3396,43 @@
   "tour.completedStepModal.viewResidentsAppGuide.subtitle": "You can go back to it",
   "tour.completedStepModal.viewResidentsAppGuide.subtitleLinkLabel": "on the Guide page",
   "tour.completedStepModal.viewResidentsAppGuide.title": "You've viewed the mobile app implementation guide",
-  "tour.guide.aboutApp.costs.card.body": "Reduces operational expenses",
-  "tour.guide.aboutApp.costs.modal.body": "The app allows residents to receive notifications about accidents, create requests, track their status, and interact with the management company within the request. This reduces the number of calls to the dispatch center and decreases the processing time of each request, ultimately reducing operational expenses.",
-  "tour.guide.aboutApp.costs.modal.picText": "The Resident App reduces operational expenses",
-  "tour.guide.aboutApp.extraIncome.card.body": "Brings additional income from paid services",
-  "tour.guide.aboutApp.extraIncome.modal.body": "The management company can offer residents additional services through the app. This brings in revenue, and thanks to process automation, costs for processing paid requests are reduced. Quality service, verified craftsmen, convenient registration, and payment for services increase residents' loyalty.",
-  "tour.guide.aboutApp.extraIncome.modal.picText": "The Resident App brings additional revenue from paid services",
-  "tour.guide.aboutApp.payments.card.body": "Increases payment collection rates and reduces accounts receivable",
-  "tour.guide.aboutApp.payments.modal.body": "Residents are more likely to pay bills if it's fast and convenient. In the app, you can pay all bills in two clicks: because {accent}bills are automatically loaded{/accent} — no need to scan QR codes or enter details every time, and you can also {accent}pay multiple bills{/accent} with one button using a saved card or SberPay.",
-  "tour.guide.aboutApp.payments.modal.body.secondParagraph": "To ensure residents don't miss payments, we send {accent}push notifications{/accent} about new bills. {accent}Debtors are notified{/accent} twice a month. And after each payment, we suggest setting up autopay.",
-  "tour.guide.aboutApp.payments.modal.picText": "The Resident App increases payment collection rates and reduces accounts receivable",
-  "tour.guide.aboutApp.quality.card.body": "Improves service quality",
-  "tour.guide.aboutApp.quality.modal.body": "Quick responses to requests make communication more transparent and increase residents' loyalty. The app allows receiving news about important events in the life of the building and notifies about the progress of requests. The ability to evaluate requests, comment on them, and communicate with the management company in the chat helps control the quality of services.",
-  "tour.guide.aboutApp.quality.modal.picText": "The Resident App improves service quality",
-  "tour.guide.aboutApp.title": "How the Resident App helps Management Companies",
-  "tour.guide.introduceApp.step": "Step",
-  "tour.guide.introduceApp.step.announcement.body": "Download and print materials for the information board in the entrances of your buildings. Residents will be able to download the app through {accent}the QR code in the announcement.{/accent}",
-  "tour.guide.introduceApp.step.announcement.body.secondParagraph": "We also prepared a set of materials for management companies that {accent}do not charge residents{/accent} for payments - this is {accent}an important argument in favor of payment{/accent} of bills through the app.",
-  "tour.guide.introduceApp.step.announcement.downloadMaterials": "Download Materials",
-  "tour.guide.introduceApp.step.announcement.title": "Post an Announcement on the Notice Board in the Entrances",
-  "tour.guide.introduceApp.step.banner.body": "{accent}Download a banner{/accent} with information about the mobile app and place it on the main page of your website, if you have one. Residents will be able to download the app through the QR code on the banner.",
-  "tour.guide.introduceApp.step.banner.downloadMaterials": "Download for Website",
-  "tour.guide.introduceApp.step.banner.title": "Place a Banner on the Management Company's Website",
-  "tour.guide.introduceApp.step.chats.body": "Send a message about the capabilities of the mobile app in chats with residents. {accent}We've prepared a template for such a message{/accent} — just insert the name of your management company, and the message is ready.",
-  "tour.guide.introduceApp.step.chats.downloadMaterials": "Download Message Template",
-  "tour.guide.introduceApp.step.chats.title": "Tell Residents in Chats",
-  "tour.guide.introduceApp.step.layout.body": "Add ready information about the mobile app to the invoice, {accent}for example, on the back.{/accent}",
-  "tour.guide.introduceApp.step.layout.body.secondParagraph": "Residents will be able to download the app through the QR code on the invoice.",
-  "tour.guide.introduceApp.step.layout.body.thirdParagraph": "Plus, {accent}Doma will send SMS notifications to residents{/accent} when they first download invoices. This is another way to tell about the app for management companies that send invoices to residents.",
-  "tour.guide.introduceApp.step.layout.downloadMaterials": "Download for Invoice",
-  "tour.guide.introduceApp.step.layout.title": "Place the Layout on Invoices",
-  "tour.guide.introduceApp.step.leaflet.body": "{accent}A leaflet is a two-sided printed sheet{/accent} in the form of a 'booklet' or 'accordion'. Download and print materials on a color printer to distribute to residents. They will be able to download the app through the QR code on the leaflet.",
-  "tour.guide.introduceApp.step.leaflet.downloadMaterials": "Download for Leaflet",
-  "tour.guide.introduceApp.step.leaflet.title": "Hand Out Leaflets to Residents Upon Move-In",
-  "tour.guide.introduceApp.step.socialNetworks.body": "We've prepared materials for a post on social networks, where {accent}we've illustrated the advantages{/accent} of the mobile app in six images and explained how residents can download it. Download the post text and images, insert the name of your management company into the text, and the post is ready.",
-  "tour.guide.introduceApp.step.socialNetworks.downloadMaterials": "Download materials",
-  "tour.guide.introduceApp.step.socialNetworks.title": "Post on Social Networks",
-  "tour.guide.introduceApp.step.stickers.body": "Download and {accent}attach an attractive sticker{/accent} to surfaces that residents frequently interact with, such as {accent}doors{/accent}, in the elevator, or on mailboxes. Residents will be able to download the app through the QR code on the sticker.",
-  "tour.guide.introduceApp.step.stickers.downloadMaterials": "Download Sticker Template",
-  "tour.guide.introduceApp.step.stickers.title": "Place Stickers in Frequently Visited Areas of the Building",
+  "tour.guide.aboutApp.costs.banner.body": "Convenient tracking of requests and outage notifications reduces the number of resident calls and the time spent handling inquiries.",
+  "tour.guide.aboutApp.costs.modal.body": "The app allows residents to receive outage notifications, create requests, track their status, and interact with the management company within the request. This reduces the number of calls to the dispatch center and decreases the processing time for each request, ultimately lowering operational costs.",
+  "tour.guide.aboutApp.costs.title": "Reduce operational costs with the Resident App",
+  "tour.guide.aboutApp.extraIncome.banner.body": "Additional services generate income, and process automation reduces the cost of handling paid requests.",
+  "tour.guide.aboutApp.extraIncome.modal.body": "The management company can offer residents additional services through the app. This generates income, and by automating processes, the cost of handling paid requests is reduced. Quality service, verified professionals, and convenient ordering and payment increase resident loyalty.",
+  "tour.guide.aboutApp.extraIncome.title": "Earn from paid services with the Resident App",
+  "tour.guide.aboutApp.payments.banner.body": "All bills can be paid in two taps, and to avoid missing new ones, there are notifications and auto-payment options.",
+  "tour.guide.aboutApp.payments.modal.body": "Residents are more likely to pay bills when it's quick and convenient. In the app, all bills can be paid in two clicks: since {accent}bills are loaded automatically{/accent}, there's no need to scan a QR code or enter details each time. You can also {accent}pay multiple bills{/accent} at once using a saved card or SberPay.",
+  "tour.guide.aboutApp.payments.modal.body.secondParagraph": "To ensure residents don't miss payments, we'll send a {accent}push notification{/accent} about a new bill. {accent}Debtors are notified{/accent} twice a month. After each payment, we offer to set up auto-payment.",
+  "tour.guide.aboutApp.payments.title": "Reduce accounts receivable with the Resident App",
+  "tour.guide.aboutApp.quality.banner.body": "News about events in the building, chat with residents, and work evaluations enable transparent communication.",
+  "tour.guide.aboutApp.quality.modal.body": "Prompt responses to requests make communication more transparent and increase resident loyalty. The app allows receiving news about important events in the building and notifies about the progress of request fulfillment. The ability to evaluate requests, comment on them, and communicate with the management company in chat helps control service quality.",
+  "tour.guide.aboutApp.quality.title": "Improve service quality with the Resident App",
+  "tour.guide.introduceApp.step.announcement.body": "Download and print materials for the information board in your building entrances. Residents can download the app via the QR code in the announcement.",
+  "tour.guide.introduceApp.step.announcement.body.secondParagraph": "We’ve also prepared a set of materials for management companies that don’t charge residents a commission on bills — this is an important argument for paying bills through the app.",
+  "tour.guide.introduceApp.step.announcement.downloadMaterials": "Download materials",
+  "tour.guide.introduceApp.step.announcement.title": "1. Announcement on the info board\nin the building entrance",
+  "tour.guide.introduceApp.step.banner.body": "Download a banner with information about the mobile app and place it on the homepage of your website, if you have one. Residents can download the app via the QR code on the banner.",
+  "tour.guide.introduceApp.step.banner.downloadMaterials": "Download for website",
+  "tour.guide.introduceApp.step.banner.title": "4. Place a banner\non the management company’s website",
+  "tour.guide.introduceApp.step.chats.body": "Send a message about the mobile app’s features to your resident chat groups. We’ve prepared a template — just insert your company name and it’s ready to send.",
+  "tour.guide.introduceApp.step.chats.downloadMaterials": "Download message template",
+  "tour.guide.introduceApp.step.chats.title": "2. Share in chat groups\nwith residents",
+  "tour.guide.introduceApp.step.layout.body": "Add pre-made information about the mobile app to your bill, for example on the reverse side.",
+  "tour.guide.introduceApp.step.layout.body.secondParagraph": "Residents can download the app via the QR code on the bill.",
+  "tour.guide.introduceApp.step.layout.body.thirdParagraph": "Additionally, Domá will send SMS notifications to residents when bills are loaded for the first time. It’s another way to promote the app for companies that send bills to residents.",
+  "tour.guide.introduceApp.step.layout.downloadMaterials": "Download for bill",
+  "tour.guide.introduceApp.step.layout.title": "3. Add layout\non bills",
+  "tour.guide.introduceApp.step.leaflet.body": "The leaflet is a double-sided printed sheet in a 'booklet' or 'accordion' format. Download and print the materials in color to hand out to residents. They can download the app via the QR code on the leaflet.",
+  "tour.guide.introduceApp.step.leaflet.downloadMaterials": "Download for leaflet",
+  "tour.guide.introduceApp.step.leaflet.title": "6. Distribute the leaflet to residents\nat move-in",
+  "tour.guide.introduceApp.step.socialNetworks.body": "We’ve prepared social media post materials that describe the app’s benefits in six images and show how residents can download it. Download the post text and images, insert your company name — and it’s ready to post.",
+  "tour.guide.introduceApp.step.socialNetworks.downloadMaterials": "Download post materials",
+  "tour.guide.introduceApp.step.socialNetworks.title": "5. Publish a post\non social media",
+  "tour.guide.introduceApp.step.stickers.body": "Download and place an attractive sticker on surfaces that residents frequently interact with, such as doors, elevators, or mailboxes. Residents can download the app via the QR code on the sticker.",
+  "tour.guide.introduceApp.step.stickers.downloadMaterials": "Download sticker design",
+  "tour.guide.introduceApp.step.stickers.title": "7. Place stickers in\nfrequently visited areas",
   "tour.guide.introduceApp.title": "How to Implement the Mobile App",
   "tour.guide.title": "Doma - Resident Mobile App",
   "tour.newFeatures.employee.chatWithEmployees": "Leave comments for colleagues in ticket chat",
