--- a/apps/condo/lang/es/es.json
+++ b/apps/condo/lang/es/es.json
@@ -3396,45 +3396,43 @@
   "tour.completedStepModal.viewResidentsAppGuide.subtitle": "Puede volver a verla",
   "tour.completedStepModal.viewResidentsAppGuide.subtitleLinkLabel": "en la página de la Guía",
   "tour.completedStepModal.viewResidentsAppGuide.title": "Ha consultado la guía de implementación de la aplicación móvil",
-  "tour.guide.aboutApp.costs.card.body": "Reduce los costos operativos",
-  "tour.guide.aboutApp.costs.modal.body": "La aplicación permite a los vecinos recibir notificaciones sobre incidencias, reportar incidencias, hacer un seguimiento de su estado e interactuar con el administrador dentro de la aplicación. Esto reduce la cantidad de llamadas al centro de despacho y reduce el tiempo de procesamiento por incidencia, lo que en última instancia reduce los costos operativos.",
-  "tour.guide.aboutApp.costs.modal.picText": "La aplicación para vecinos reduce los costes operativos",
-  "tour.guide.aboutApp.extraIncome.card.body": "Aporta ingresos adicionales por servicios de pago",
-  "tour.guide.aboutApp.extraIncome.modal.body": "El administrador puede ofrecer servicios adicionales a los vecinos a través de la aplicación. Esto genera ingresos y, al automatizar los procesos, se reducen los costes de tramitación de las incidencias de pago. El servicio de alta calidad, los profesionales confiables, el diseño y el pago intuitivos aumentan la fidelidad de los vecinos.",
-  "tour.guide.aboutApp.extraIncome.modal.picText": "La aplicación de vecino genera ingresos adicionales por servicios de pago",
-  "tour.guide.aboutApp.payments.card.body": "Aumenta el cobro de los pagos y reduce las cuentas por cobrar",
-  "tour.guide.aboutApp.payments.modal.body": "Es más probable que los vecinos paguen los recibos si es rápido y cómodo. En la aplicación se puede pagar todos los recibos en dos clics: como {accent}los recibos se cargando automaticamente{/accent} — no hay que escanear un código QR o introducir detalles cada vez, y también puede {accent}pagar varios recibos{/accent} con un solo botón usando una tarjeta guardada o VerdePay.",
-  "tour.guide.aboutApp.payments.modal.body.secondParagraph": "Para evitar que los vecinos pierdan pagos, enviaremos una {accent}notificación-push{/accent} sobre un nuevo recibo. {accent}Notificamos a los deudores{/accent} dos veces al mes. Y después de cada pago, sugerimos configurar el pago automático.",
-  "tour.guide.aboutApp.payments.modal.picText": "La aplicación para vecinos aumenta el cobro de pagos y reduce las cuentas por cobrar",
-  "tour.guide.aboutApp.quality.card.body": "Mejora la calidad del servicio",
-  "tour.guide.aboutApp.quality.modal.body": "La pronta respuesta a las consultas hace más transparente la comunicación y aumenta la fidelidad de los vecinos. La aplicación le permite recibir noticias sobre eventos importantes en la vida de su comunidad y le notifica sobre el progreso de las Acabas de reportar tu primera incidencias. La capacidad de evaluar Acabas de reportar tu primera incidencias, comentarlas y comunicarse con el administrador a través del chat ayuda a controlar la calidad de los servicios.",
-  "tour.guide.aboutApp.quality.modal.picText": "La aplicación del vecino mejora la calidad del servicio",
-  "tour.guide.aboutApp.title": "Cómo la aplicación del vecino ayuda al administrador",
-  "tour.guide.introduceApp.step": "Paso",
-  "tour.guide.introduceApp.step.announcement.body": "Descargue e imprime los materiales para tablónes de anuncios de sus comunidades. Los vecinos podrán descargar la aplicación a través del {accent}código QR del anuncio.{/accent}",
-  "tour.guide.introduceApp.step.announcement.body.secondParagraph": "Además, hemos preparado un conjunto de materiales para los administradores que {accent}no cobran comisión de los vecinos{/accent} por recibos — esto es {accent}un argumento importante a favor de pagar{/accent} los recibos a través de la aplicación.",
+  "tour.guide.aboutApp.costs.banner.body": "El seguimiento conveniente de solicitudes y las notificaciones de interrupciones reducen la cantidad de llamadas de los residentes y el tiempo dedicado a atender consultas.",
+  "tour.guide.aboutApp.costs.modal.body": "La aplicación permite a los residentes recibir notificaciones de interrupciones, crear solicitudes, seguir su estado e interactuar con la empresa administradora dentro de la solicitud. Esto reduce la cantidad de llamadas al centro de despacho y disminuye el tiempo de procesamiento de cada solicitud, lo que en última instancia reduce los costos operativos.",
+  "tour.guide.aboutApp.costs.title": "Reduzca los costos operativos con la aplicación del residente",
+  "tour.guide.aboutApp.extraIncome.banner.body": "Los servicios adicionales generan ingresos, y la automatización de procesos reduce el costo de manejar solicitudes pagadas.",
+  "tour.guide.aboutApp.extraIncome.modal.body": "La empresa administradora puede ofrecer servicios adicionales a los residentes a través de la aplicación. Esto genera ingresos, y al automatizar los procesos, se reduce el costo de manejar solicitudes pagadas. Un servicio de calidad, profesionales verificados y una orden y pago convenientes aumentan la lealtad de los residentes.",
+  "tour.guide.aboutApp.extraIncome.title": "Gane con servicios pagados con la aplicación del residente",
+  "tour.guide.aboutApp.payments.banner.body": "Todas las facturas se pueden pagar en dos toques, y para no perder nuevas, hay notificaciones y opciones de pago automático.",
+  "tour.guide.aboutApp.payments.modal.body": "Los residentes son más propensos a pagar las facturas cuando es rápido y conveniente. En la aplicación, todas las facturas se pueden pagar en dos clics: como {accent}las facturas se cargan automáticamente{/accent}, no es necesario escanear un código QR o ingresar detalles cada vez. También puede {accent}pagar múltiples facturas{/accent} a la vez usando una tarjeta guardada o SberPay.",
+  "tour.guide.aboutApp.payments.modal.body.secondParagraph": "Para asegurarse de que los residentes no pierdan pagos, enviaremos una {accent}notificación push{/accent} sobre una nueva factura. {accent}Los deudores son notificados{/accent} dos veces al mes. Después de cada pago, ofrecemos configurar el pago automático.",
+  "tour.guide.aboutApp.payments.title": "Reduzca las cuentas por cobrar con la aplicación del residente",
+  "tour.guide.aboutApp.quality.banner.body": "Noticias sobre eventos en el edificio, chat con residentes y evaluaciones de trabajos permiten una comunicación transparente.",
+  "tour.guide.aboutApp.quality.modal.body": "Las respuestas rápidas a las solicitudes hacen que la comunicación sea más transparente y aumentan la lealtad de los residentes. La aplicación permite recibir noticias sobre eventos importantes en el edificio y notifica sobre el progreso de la realización de solicitudes. La capacidad de evaluar solicitudes, comentarlas y comunicarse con la empresa administradora en el chat ayuda a controlar la calidad del servicio.",
+  "tour.guide.aboutApp.quality.title": "Mejore la calidad del servicio con la aplicación del residente",
+  "tour.guide.introduceApp.step.announcement.body": "Descargue e imprima materiales para el panel informativo en las entradas de sus edificios. Los residentes podrán descargar la aplicación mediante el código QR del anuncio.",
+  "tour.guide.introduceApp.step.announcement.body.secondParagraph": "También hemos preparado un conjunto de materiales para las empresas administradoras que no cobran comisión a los residentes por los pagos de facturas — este es un argumento importante a favor del uso de la aplicación para pagar.",
   "tour.guide.introduceApp.step.announcement.downloadMaterials": "Descargar materiales",
-  "tour.guide.introduceApp.step.announcement.title": "Coloque un anuncio en los tablones de anuncios de portales",
-  "tour.guide.introduceApp.step.banner.body": "{accent}Descargue el banner{/accent} con información sobre la aplicación móvil y colóquela en la página principal de su sitio web si lo tiene. Los vecinos podrán descargarla a través del código QR del banner.",
+  "tour.guide.introduceApp.step.announcement.title": "1. Anuncio en el panel informativo\nen la entrada",
+  "tour.guide.introduceApp.step.banner.body": "Descargue un banner con información sobre la aplicación móvil y colóquelo en la página principal de su sitio web, si tiene uno. Los residentes podrán descargar la aplicación mediante el código QR del banner.",
   "tour.guide.introduceApp.step.banner.downloadMaterials": "Descargar para el sitio web",
-  "tour.guide.introduceApp.step.banner.title": "Coloque el banner en el sitio web del administrador",
-  "tour.guide.introduceApp.step.chats.body": "Envíe un mensaje sobre las capacidades de la aplicación móvil a los chats con vecinos. {accent}Hemos preparado una plantilla para dicho mensaje{/accent} — inserte el nombre de su organización gestora y el mensaje está listo.",
-  "tour.guide.introduceApp.step.chats.downloadMaterials": "Descargar la plantilla del mensaje",
-  "tour.guide.introduceApp.step.chats.title": "Contar en chats con vecinos",
-  "tour.guide.introduceApp.step.layout.body": "Añada información ya preparada sobre la aplicación móvil al recibo, {accent}por ejemplo en el reverso.{/accent}",
-  "tour.guide.introduceApp.step.layout.body.secondParagraph": "Los vecinos podrán descargar la aplicación mediante un código QR en el recibo.",
-  "tour.guide.introduceApp.step.layout.body.thirdParagraph": "Además, {accent}Doma se encargará de enviar los mensajes de texto a los residentes {/accent} cuando descarguen los recibos por primera vez. Esta es otra forma de contar sobre la aplicación a los administradores que envían recibos a los residentes.",
-  "tour.guide.introduceApp.step.layout.downloadMaterials": "Descargar para recibos",
-  "tour.guide.introduceApp.step.layout.title": "Coloque la maqueta en recibos",
-  "tour.guide.introduceApp.step.leaflet.body": "{accent}El folleto es una hoja impresa a doble cara {/accent} en forma de libro. Descargue e imprime el material en una impresora en color para poder entregárselo a los vecinos. Podrán descargar la aplicación a través del código QR en el folleto.",
+  "tour.guide.introduceApp.step.banner.title": "4. Coloque un banner\nen el sitio web de la empresa",
+  "tour.guide.introduceApp.step.chats.body": "Envíe un mensaje sobre las funcionalidades de la aplicación móvil a los chats con los residentes. Hemos preparado una plantilla del mensaje — solo agregue el nombre de su empresa y estará listo.",
+  "tour.guide.introduceApp.step.chats.downloadMaterials": "Descargar plantilla del mensaje",
+  "tour.guide.introduceApp.step.chats.title": "2. Comparta en los chats\ncon residentes",
+  "tour.guide.introduceApp.step.layout.body": "Agregue información sobre la aplicación móvil a la factura, por ejemplo en el reverso.",
+  "tour.guide.introduceApp.step.layout.body.secondParagraph": "Los residentes podrán descargar la aplicación mediante el código QR de la factura.",
+  "tour.guide.introduceApp.step.layout.body.thirdParagraph": "Además, Domá enviará SMS a los residentes en el primer envío de facturas. Es otra forma de promocionar la aplicación para las empresas que envían facturas.",
+  "tour.guide.introduceApp.step.layout.downloadMaterials": "Descargar para la factura",
+  "tour.guide.introduceApp.step.layout.title": "3. Agregue el diseño\nen las facturas",
+  "tour.guide.introduceApp.step.leaflet.body": "El folleto es una hoja impresa a doble cara en formato de 'librito' o 'acordeón'. Descargue e imprima los materiales en color para entregarlos a los residentes. Podrán descargar la aplicación mediante el código QR del folleto.",
   "tour.guide.introduceApp.step.leaflet.downloadMaterials": "Descargar para folleto",
-  "tour.guide.introduceApp.step.leaflet.title": "Entregue el folleto a los vecinos en el momento de mudar.",
-  "tour.guide.introduceApp.step.socialNetworks.body": "Hemos preparado materiales para una publicación en redes sociales, donde {accent}en seis imágenes describimos las ventajas{/accent} de la aplicación móvil y cómo los vecinos pueden descargarla. Descargue el texto y las imágenes de la publicación, inserte el nombre de su administración en el texto y el post estará listo.",
-  "tour.guide.introduceApp.step.socialNetworks.downloadMaterials": "Descargar materiales para el post",
-  "tour.guide.introduceApp.step.socialNetworks.title": "Publicar el post en redes sociales",
-  "tour.guide.introduceApp.step.stickers.body": "Descargue y {accent}pegue una bonita pegatina{/accent}a las superficies con las que los vecinos interactúan con frecuencia, como {accent}en una puerta {/accent}, en un ascensor o en buzones de correo. Los vecinos podrán descargar la aplicación mediante un código QR en la pegatina.",
-  "tour.guide.introduceApp.step.stickers.downloadMaterials": "Descargar el diseño de la pegatina",
-  "tour.guide.introduceApp.step.stickers.title": "Coloque pegatinas en las zonas más visitadas del edificio",
+  "tour.guide.introduceApp.step.leaflet.title": "6. Entregue el folleto a los residentes\nal mudarse",
+  "tour.guide.introduceApp.step.socialNetworks.body": "Hemos preparado materiales para una publicación en redes sociales, con seis imágenes que muestran las ventajas de la aplicación y cómo descargarla. Descargue el texto y las imágenes, agregue el nombre de su empresa — y la publicación estará lista.",
+  "tour.guide.introduceApp.step.socialNetworks.downloadMaterials": "Descargar materiales para publicación",
+  "tour.guide.introduceApp.step.socialNetworks.title": "5. Publique en las redes sociales",
+  "tour.guide.introduceApp.step.stickers.body": "Descargue y coloque una pegatina atractiva en superficies que los residentes usen con frecuencia, como puertas, ascensores o buzones. Podrán descargar la aplicación mediante el código QR en la pegatina.",
+  "tour.guide.introduceApp.step.stickers.downloadMaterials": "Descargar diseño de la pegatina",
+  "tour.guide.introduceApp.step.stickers.title": "7. Coloque pegatinas en\nlugares frecuentados del edificio",
   "tour.guide.introduceApp.title": "Cómo implementar la aplicación móvil",
   "tour.guide.title": "Doma — aplicación móvil del vecino",
   "tour.newFeatures.employee.chatWithEmployees": "Dejar comentarios a los empleados en el chat de la incidencia",
