--- a/apps/condo/lang/ru/ru.json
+++ b/apps/condo/lang/ru/ru.json
@@ -3396,45 +3396,43 @@
   "tour.completedStepModal.viewResidentsAppGuide.subtitle": "Вы можете вернуться у нему",
   "tour.completedStepModal.viewResidentsAppGuide.subtitleLinkLabel": "на странице Путеводителя",
   "tour.completedStepModal.viewResidentsAppGuide.title": "Вы посмотрели гайд о внедрении мобильного приложения",
-  "tour.guide.aboutApp.costs.card.body": "Сокращает операционные расходы",
+  "tour.guide.aboutApp.costs.banner.body": "Удобное отслеживание заявки и уведомления об отключениях сокращает количество звонков от жителей и время на работу с обращениями",
   "tour.guide.aboutApp.costs.modal.body": "Приложение позволяет жителям получать уведомления об авариях, создавать заявки, отслеживать их статус, а также взаимодействовать с УК внутри заявки. Это сокращает количество звонков в диспетчерскую и уменьшает время обработки одной заявки, что в конечном итоге снижает операционные расходы.",
-  "tour.guide.aboutApp.costs.modal.picText": "Приложение для Жителя сокращает операционные расходы",
-  "tour.guide.aboutApp.extraIncome.card.body": "Приносит дополнительный доход от платных услуг",
+  "tour.guide.aboutApp.costs.title": "Сокращайте операционные расходы с приложением Жителя",
+  "tour.guide.aboutApp.extraIncome.banner.body": "Дополнительные сервисы приносят доход, а автоматизация процессов снижает затраты на обработку платных заявок",
   "tour.guide.aboutApp.extraIncome.modal.body": "Управляющая компания может предлагать жителям дополнительные услуги через приложение. Это приносит доход, а за счет автоматизации процессов затраты на обработку платных заявок снижаются. Качественный сервис, проверенные мастера, удобное оформление и оплата услуги повышает лояльность жителей.",
-  "tour.guide.aboutApp.extraIncome.modal.picText": "Приложение для Жителя приносит дополнительный доход от платных услуг",
-  "tour.guide.aboutApp.payments.card.body": "Повышает собираемость платежей и снижает дебиторскую задолженность",
+  "tour.guide.aboutApp.extraIncome.title": "Зарабатывайте на платных услугах с приложением Жителя",
+  "tour.guide.aboutApp.payments.banner.body": "Все квитанции можно оплатить в два касания, а чтобы не пропустить новые - есть уведомления и автоплатеж",
   "tour.guide.aboutApp.payments.modal.body": "Жители чаще оплачивают квитанции, если это быстро и удобно. В приложении можно оплатить все квитанции в два клика: поскольку {accent}квитанции загружаются автоматически{/accent} — не нужно каждый раз сканировать QR-код или вводить реквизиты, а еще можно {accent}оплатить несколько квитанций{/accent} одной кнопкой с помощью сохраненной карты или SberPay.",
   "tour.guide.aboutApp.payments.modal.body.secondParagraph": "Чтобы жители не пропускали платежи, мы пришлем {accent}пуш-уведомление{/accent} о новой квитанции. {accent}Должников уведомляем{/accent} два раза в месяц. А после каждой оплаты — предлагаем настроить автоплатеж.",
-  "tour.guide.aboutApp.payments.modal.picText": "Приложение для Жителя повышает собираемость платежей и снижает дебиторскую задолженность",
-  "tour.guide.aboutApp.quality.card.body": "Улучшает качество обслуживания",
+  "tour.guide.aboutApp.payments.title": "Снизьте дебиторскую задолженность с приложением Жителя",
+  "tour.guide.aboutApp.quality.banner.body": "Новости о событиях в доме, чат с жителем и оценка работ позволяет выстраивать прозрачную коммуникацию",
   "tour.guide.aboutApp.quality.modal.body": "Оперативная реакция на запросы делает коммуникацию прозрачнее и повышает лояльность жителей. Приложение позволяет получать новости о важных событиях в жизни дома и оповещает о ходе выполнения заявок. Возможность оценивать заявки, комментировать их и общаться с УК в чате помогает контролировать качество услуг.",
-  "tour.guide.aboutApp.quality.modal.picText": "Приложение для Жителя улучшает качество обслуживания",
-  "tour.guide.aboutApp.title": "Как приложение для Жителя помогает УК",
-  "tour.guide.introduceApp.step": "Шаг",
-  "tour.guide.introduceApp.step.announcement.body": "Скачайте и распечатайте материалы для информационного стенда в подъездах ваших домов. Жители смогут загрузить приложение через {accent}QR-код в объявлении.{/accent}",
-  "tour.guide.introduceApp.step.announcement.body.secondParagraph": "Так же, мы подготовили комплект материалов для управляющих компаний, которые {accent}не берут комиссию с жителей{/accent} по квитанциям — это {accent}важный аргумент в пользу оплаты{/accent} квитанций через приложение.",
+  "tour.guide.aboutApp.quality.title": "Улучшайте качество обслуживания c приложением Жителя",
+  "tour.guide.introduceApp.step.announcement.body": "Скачайте и распечатайте материалы для информационного стенда в подъездах ваших домов. Жители смогут загрузить приложение через QR-код в объявлении.",
+  "tour.guide.introduceApp.step.announcement.body.secondParagraph": "Так же, мы подготовили комплект материалов для управляющих компаний, которые не берут комиссию с жителей по квитанциям — это важный аргумент в пользу оплаты квитанций через приложение.",
   "tour.guide.introduceApp.step.announcement.downloadMaterials": "Скачать материалы",
-  "tour.guide.introduceApp.step.announcement.title": "Разместите объявление на инфостенде в подъездах",
-  "tour.guide.introduceApp.step.banner.body": "{accent}Скачайте баннер{/accent} с информацией о мобильном приложении и разместите на главной странице вашего сайта, если он у вас есть. Жители смогут загрузить приложение через QR-код на баннере.",
+  "tour.guide.introduceApp.step.announcement.title": "1. Объявление на инфостенде \n в подъездах",
+  "tour.guide.introduceApp.step.banner.body": "Скачайте баннер с информацией о мобильном приложении и разместите на главной странице вашего сайта, если он у вас есть. Жители смогут загрузить приложение через QR-код на баннере.",
   "tour.guide.introduceApp.step.banner.downloadMaterials": "Скачать для сайта",
-  "tour.guide.introduceApp.step.banner.title": "Разместите баннер на сайте УК",
-  "tour.guide.introduceApp.step.chats.body": "Отправьте сообщение о возможностях мобильного приложения в чаты с жителями. {accent}Мы подготовили шаблон такого сообщения{/accent} — подставьте название вашей УК и сообщение готово.",
+  "tour.guide.introduceApp.step.banner.title": "4. Разместите баннер \n на сайте УК",
+  "tour.guide.introduceApp.step.chats.body": "Отправьте сообщение о возможностях мобильного приложения в чаты с жителями. Мы подготовили шаблон такого сообщения — подставьте название вашей УК и сообщение готово.",
   "tour.guide.introduceApp.step.chats.downloadMaterials": "Скачать шаблон сообщения",
-  "tour.guide.introduceApp.step.chats.title": "Расскажите в чатах с жителями",
-  "tour.guide.introduceApp.step.layout.body": "Добавьте на квитанцию готовую информацию о мобильном приложении, {accent}например на обратную сторону.{/accent}",
+  "tour.guide.introduceApp.step.chats.title": "2. Расскажите в чатах \n с жителями",
+  "tour.guide.introduceApp.step.layout.body": "Добавьте на квитанцию готовую информацию о мобильном приложении, например на обратную сторону.",
   "tour.guide.introduceApp.step.layout.body.secondParagraph": "Жители смогут загрузить приложение через QR-код на квитанции.",
-  "tour.guide.introduceApp.step.layout.body.thirdParagraph": "Плюс, {accent}Домá сами сделают СМС-рассылку жителям{/accent} при первой загрузке квитанций. Это еще один способ рассказать о приложении для УК, которые отправляют жителям квитанции.",
+  "tour.guide.introduceApp.step.layout.body.thirdParagraph": "Плюс, Домá сами сделают СМС-рассылку жителям при первой загрузке квитанций. Это еще один способ рассказать о приложении для УК, которые отправляют жителям квитанции.",
   "tour.guide.introduceApp.step.layout.downloadMaterials": "Скачать для квитанции",
-  "tour.guide.introduceApp.step.layout.title": "Разместите макет на квитанциях",
-  "tour.guide.introduceApp.step.leaflet.body": "{accent}Лифлет — это двухсторонний отпечатанный лист{/accent} в виде «книжки» или «гармошки». Скачайте и распечатайте материалы на цветном принтере, чтобы можно было раздать жителям. Они смогут загрузить приложение через QR-код на лифлете.",
+  "tour.guide.introduceApp.step.layout.title": "3. Разместите макет \n на квитанциях",
+  "tour.guide.introduceApp.step.leaflet.body": "Лифлет — это двухсторонний отпечатанный лист в виде «книжки» или «гармошки». Скачайте и распечатайте материалы на цветном принтере, чтобы можно было раздать жителям. Они смогут загрузить приложение через QR-код на лифлете.",
   "tour.guide.introduceApp.step.leaflet.downloadMaterials": "Скачать для лифлета",
-  "tour.guide.introduceApp.step.leaflet.title": "Передайте лифлет жителям при заселении",
-  "tour.guide.introduceApp.step.socialNetworks.body": "Мы подготовили материалы для поста в соцсетях, где {accent}в шести картинках расписали преимущества{/accent} мобильного приложения, и как жителям его скачать. Скачайте текст публикации и картинки, подставьте название вашей УК в текст — и пост готов.",
+  "tour.guide.introduceApp.step.leaflet.title": "6. Передайте лифлет жителям при \n заселении",
+  "tour.guide.introduceApp.step.socialNetworks.body": "Мы подготовили материалы для поста в соцсетях, где в шести картинках расписали преимущества мобильного приложения, и как жителям его скачать. Скачайте текст публикации и картинки, подставьте название вашей УК в текст — и пост готов.",
   "tour.guide.introduceApp.step.socialNetworks.downloadMaterials": "Скачать материалы для поста",
-  "tour.guide.introduceApp.step.socialNetworks.title": "Опубликуйте пост в соцсетях",
-  "tour.guide.introduceApp.step.stickers.body": "Скачайте и {accent}прикрепите симпатичную наклейку{/accent} на поверхностях, с которыми жители часто взаимодействуют, например {accent}на двери{/accent}, в лифте или на почтовых ящиках. Жители смогут загрузить приложение через QR-код на наклейке.",
+  "tour.guide.introduceApp.step.socialNetworks.title": "5. Опубликуйте пост \n в соцсетях",
+  "tour.guide.introduceApp.step.stickers.body": "Скачайте и прикрепите симпатичную наклейку на поверхностях, с которыми жители часто взаимодействуют, например на двери, в лифте или на почтовых ящиках. Жители смогут загрузить приложение через QR-код на наклейке.",
   "tour.guide.introduceApp.step.stickers.downloadMaterials": "Скачать макет наклейки",
-  "tour.guide.introduceApp.step.stickers.title": "Разместите наклейки в часто посещаемых местах дома",
+  "tour.guide.introduceApp.step.stickers.title": "7. Разместите наклейки в часто \n посещаемых местах дома",
   "tour.guide.introduceApp.title": "Как внедрить мобильное приложение",
   "tour.guide.title": "Doma — мобильное приложение жителя",
   "tour.newFeatures.employee.chatWithEmployees": "Оставлять комментарии коллегам в чате заявки",
