feat(condo): DOMA-11237 added warehouse and commercial unit types to parking

--- a/apps/condo/lang/en/en.json
+++ b/apps/condo/lang/en/en.json
@@ -2402,12 +2402,14 @@
   "pages.condo.property.map.modal.totalContacts": "Registered residents",
   "pages.condo.property.menu.MenuPlaceholder": "Add element",
   "pages.condo.property.modal.RenameNextParking": "Rename the following parking in order",
-  "pages.condo.property.modal.RenameNextParkingUnits": "Rename the following parking unit in order",
+  "pages.condo.property.modal.RenameNextParkingUnits": "Rename the following units in order",
   "pages.condo.property.modal.RenameNextSections": "Rename the following sections in order",
   "pages.condo.property.modal.RenameNextUnits": "Rename the following unit in order",
   "pages.condo.property.modal.UnitType": "Unit type",
   "pages.condo.property.modal.title.addParking": "Add parking",
+  "pages.condo.property.modal.title.addParkingFloor": "Add parking floor",
   "pages.condo.property.modal.title.addParkingUnit": "Add parking place",
+  "pages.condo.property.modal.title.addParkingUnitRoom": "Add unit",
   "pages.condo.property.modal.title.addSection": "Add section",
   "pages.condo.property.modal.title.addSectionFloor": "Add floor",
   "pages.condo.property.modal.title.addUnit": "Add unit",
@@ -2456,13 +2458,13 @@
   "pages.condo.property.section.form.numberOfSection": "Number of section",
   "pages.condo.property.section.form.unitsOnFloor": "Units on floor",
   "pages.condo.property.select.option.floor": "Floor",
-  "pages.condo.property.select.option.interfloorroom": "Interfloor room",
   "pages.condo.property.select.option.parking": "Parking",
+  "pages.condo.property.select.option.parking.unit": "Parking Units",
   "pages.condo.property.select.option.parkingFloor": "Parking floor",
   "pages.condo.property.select.option.parkingPlace": "Parking place",
   "pages.condo.property.select.option.residentialBuilding": "Residential Building",
   "pages.condo.property.select.option.section": "Section",
-  "pages.condo.property.select.option.unit": "Unit",
+  "pages.condo.property.select.option.unit": "Property units",
   "pages.condo.property.type.building": "Building",
   "pages.condo.property.type.village": "Village",
   "pages.condo.property.unit.Name": "Name",
