--- a/apps/condo/lang/ru/ru.json
+++ b/apps/condo/lang/ru/ru.json
@@ -2402,12 +2402,14 @@
   "pages.condo.property.map.modal.totalContacts": "Зарегистрировано жителей",
   "pages.condo.property.menu.MenuPlaceholder": "Добавить элемент",
   "pages.condo.property.modal.RenameNextParking": "Изменить номера следующих паркингов",
-  "pages.condo.property.modal.RenameNextParkingUnits": "Изменить номера следующих машиномест",
+  "pages.condo.property.modal.RenameNextParkingUnits": "Изменить номера следующих помещений",
   "pages.condo.property.modal.RenameNextSections": "Изменить номера следующих подъездов",
   "pages.condo.property.modal.RenameNextUnits": "Изменить номера следующих помещений",
   "pages.condo.property.modal.UnitType": "Тип помещения",
   "pages.condo.property.modal.title.addParking": "Добавить паркинг",
+  "pages.condo.property.modal.title.addParkingFloor": "Добавить этаж паркинга",
   "pages.condo.property.modal.title.addParkingUnit": "Добавить машиноместо",
+  "pages.condo.property.modal.title.addParkingUnitRoom": "Добавить помещение",
   "pages.condo.property.modal.title.addSection": "Добавить подъезд",
   "pages.condo.property.modal.title.addSectionFloor": "Добавить этаж",
   "pages.condo.property.modal.title.addUnit": "Добавить помещение",
@@ -2456,13 +2458,13 @@
   "pages.condo.property.section.form.numberOfSection": "Номер подъезда",
   "pages.condo.property.section.form.unitsOnFloor": "Помещений на этаже",
   "pages.condo.property.select.option.floor": "Этаж",
-  "pages.condo.property.select.option.interfloorroom": "Межэтажное помещение",
   "pages.condo.property.select.option.parking": "Паркинг",
+  "pages.condo.property.select.option.parking.unit": "Помещения паркинга",
   "pages.condo.property.select.option.parkingFloor": "Этаж паркинга",
   "pages.condo.property.select.option.parkingPlace": "Машиноместо",
   "pages.condo.property.select.option.residentialBuilding": "Жилой дом",
   "pages.condo.property.select.option.section": "Подъезд",
-  "pages.condo.property.select.option.unit": "Помещение",
+  "pages.condo.property.select.option.unit": "Помещения дома",
   "pages.condo.property.type.building": "Многоквартирный дом",
   "pages.condo.property.type.village": "Коттеджный поселок",
   "pages.condo.property.unit.Name": "Название",
