refactor(condo): DOMA-11237 rename addParkingUnitRoom to addParkingFacilityUnit

--- a/apps/condo/lang/en/en.json
+++ b/apps/condo/lang/en/en.json
@@ -2409,7 +2409,7 @@
   "pages.condo.property.modal.title.addParking": "Add parking",
   "pages.condo.property.modal.title.addParkingFloor": "Add parking floor",
   "pages.condo.property.modal.title.addParkingUnit": "Add parking place",
-  "pages.condo.property.modal.title.addParkingUnitRoom": "Add unit",
+  "pages.condo.property.modal.title.addParkingFacilityUnit": "Add unit",
   "pages.condo.property.modal.title.addSection": "Add section",
   "pages.condo.property.modal.title.addSectionFloor": "Add floor",
   "pages.condo.property.modal.title.addUnit": "Add unit",
