--- a/apps/condo/lang/ru/ru.json
+++ b/apps/condo/lang/ru/ru.json
@@ -2409,7 +2409,7 @@
   "pages.condo.property.modal.title.addParking": "Добавить паркинг",
   "pages.condo.property.modal.title.addParkingFloor": "Добавить этаж паркинга",
   "pages.condo.property.modal.title.addParkingUnit": "Добавить машиноместо",
-  "pages.condo.property.modal.title.addParkingUnitRoom": "Добавить помещение",
+  "pages.condo.property.modal.title.addParkingFacilityUnit": "Добавить помещение",
   "pages.condo.property.modal.title.addSection": "Добавить подъезд",
   "pages.condo.property.modal.title.addSectionFloor": "Добавить этаж",
   "pages.condo.property.modal.title.addUnit": "Добавить помещение",
