refactor(condo): DOMA-11237 remove ParkingUnitForm

--- a/apps/condo/lang/en/en.json
+++ b/apps/condo/lang/en/en.json
@@ -2407,13 +2407,14 @@
   "pages.condo.property.modal.RenameNextUnits": "Rename the following unit in order",
   "pages.condo.property.modal.UnitType": "Unit type",
   "pages.condo.property.modal.title.addParking": "Add parking",
+  "pages.condo.property.modal.title.addParkingFacilityUnit": "Add unit",
   "pages.condo.property.modal.title.addParkingFloor": "Add parking floor",
   "pages.condo.property.modal.title.addParkingUnit": "Add parking place",
-  "pages.condo.property.modal.title.addParkingFacilityUnit": "Add unit",
   "pages.condo.property.modal.title.addSection": "Add section",
   "pages.condo.property.modal.title.addSectionFloor": "Add floor",
   "pages.condo.property.modal.title.addUnit": "Add unit",
   "pages.condo.property.modal.title.editParking": "Edit parking",
+  "pages.condo.property.modal.title.editParkingFacilityUnit": "Edit parking unit",
   "pages.condo.property.modal.title.editParkingUnit": "Remove parking place",
   "pages.condo.property.modal.title.editSection": "Edit section",
   "pages.condo.property.modal.title.editUnit": "Edit unit",
