--- a/apps/condo/lang/ru/ru.json
+++ b/apps/condo/lang/ru/ru.json
@@ -2407,13 +2407,14 @@
   "pages.condo.property.modal.RenameNextUnits": "Изменить номера следующих помещений",
   "pages.condo.property.modal.UnitType": "Тип помещения",
   "pages.condo.property.modal.title.addParking": "Добавить паркинг",
+  "pages.condo.property.modal.title.addParkingFacilityUnit": "Добавить помещение",
   "pages.condo.property.modal.title.addParkingFloor": "Добавить этаж паркинга",
   "pages.condo.property.modal.title.addParkingUnit": "Добавить машиноместо",
-  "pages.condo.property.modal.title.addParkingFacilityUnit": "Добавить помещение",
   "pages.condo.property.modal.title.addSection": "Добавить подъезд",
   "pages.condo.property.modal.title.addSectionFloor": "Добавить этаж",
   "pages.condo.property.modal.title.addUnit": "Добавить помещение",
   "pages.condo.property.modal.title.editParking": "Редактировать паркинг",
+  "pages.condo.property.modal.title.editParkingFacilityUnit": "Редактировать помещение паркинга",
   "pages.condo.property.modal.title.editParkingUnit": "Редактировать машиноместо",
   "pages.condo.property.modal.title.editSection": "Редактировать подъезд",
   "pages.condo.property.modal.title.editUnit": "Редактировать помещение",
