--- a/apps/condo/lang/es/es.json
+++ b/apps/condo/lang/es/es.json
@@ -1837,6 +1837,7 @@
   "pages.condo.contact.ImportTitle": "de vecinos",
   "pages.condo.contact.PageTitle": "Contactos de vecinos",
   "pages.condo.contact.Verified": "Verificado",
+  "pages.condo.contact.HasResident": "Приложение жителя",
   "pages.condo.e-voting.id.PageTitle": "Reunión virtual",
   "pages.condo.e-voting.index.CreateEVotingButtonLabel": "Crear nueva reunión",
   "pages.condo.e-voting.index.CreateEVotingModalTitle": "Crear nueva reunión",
