--- a/apps/condo/lang/ru/ru.json
+++ b/apps/condo/lang/ru/ru.json
@@ -1837,6 +1837,7 @@
   "pages.condo.contact.ImportTitle": "жителей",
   "pages.condo.contact.PageTitle": "Контакты жителей",
   "pages.condo.contact.Verified": "Верифицирован",
+  "pages.condo.contact.HasResident": "Приложение жителя",
   "pages.condo.e-voting.id.PageTitle": "Онлайн собрание",
   "pages.condo.e-voting.index.CreateEVotingButtonLabel": "Создать новое собрание",
   "pages.condo.e-voting.index.CreateEVotingModalTitle": "Создать новое собрание",
