feat(condo): DOMA-11237 temp temp temp

--- a/apps/condo/lang/en/en.json
+++ b/apps/condo/lang/en/en.json
@@ -2416,8 +2416,10 @@
   "pages.condo.property.modal.title.editParking": "Edit parking",
   "pages.condo.property.modal.title.editParkingFacilityUnit": "Edit parking unit",
   "pages.condo.property.modal.title.editParkingUnit": "Remove parking place",
+  "pages.condo.property.modal.title.editParkingUnits": "Edit",
   "pages.condo.property.modal.title.editSection": "Edit section",
   "pages.condo.property.modal.title.editUnit": "Edit unit",
+  "pages.condo.property.modal.title.editUnits": "Edit",
   "pages.condo.property.modal.title.unitTypeAtFloor": "Unit type at the floor",
   "pages.condo.property.modal.unitType.apartment": "Apartment",
   "pages.condo.property.modal.unitType.commercial": "Commercial unit",
