--- a/apps/condo/lang/es/es.json
+++ b/apps/condo/lang/es/es.json
@@ -2415,8 +2415,10 @@
   "pages.condo.property.modal.title.addUnit": "Añadir unidad",
   "pages.condo.property.modal.title.editParking": "Editar aparcamiento",
   "pages.condo.property.modal.title.editParkingUnit": "Editar plaza de coche",
+  "pages.condo.property.modal.title.editParkingUnits": "Editar",
   "pages.condo.property.modal.title.editSection": "Editar portal",
   "pages.condo.property.modal.title.editUnit": "Editar unidad",
+  "pages.condo.property.modal.title.editUnits": "Editar",
   "pages.condo.property.modal.title.unitTypeAtFloor": "Tipo de unidades en la planta",
   "pages.condo.property.modal.unitType.apartment": "Apartamento",
   "pages.condo.property.modal.unitType.commercial": "Local comercial",
