--- a/apps/condo/lang/ru/ru.json
+++ b/apps/condo/lang/ru/ru.json
@@ -2416,8 +2416,10 @@
   "pages.condo.property.modal.title.editParking": "Редактировать паркинг",
   "pages.condo.property.modal.title.editParkingFacilityUnit": "Редактировать помещение паркинга",
   "pages.condo.property.modal.title.editParkingUnit": "Редактировать машиноместо",
+  "pages.condo.property.modal.title.editParkingUnits": "Редактировать",
   "pages.condo.property.modal.title.editSection": "Редактировать подъезд",
   "pages.condo.property.modal.title.editUnit": "Редактировать помещение",
+  "pages.condo.property.modal.title.editUnits": "Редактировать",
   "pages.condo.property.modal.title.unitTypeAtFloor": "Тип помещений на этаже",
   "pages.condo.property.modal.unitType.apartment": "Апартаменты",
   "pages.condo.property.modal.unitType.commercial": "Коммерческое помещение",
