--- a/apps/condo/lang/ru/ru.json
+++ b/apps/condo/lang/ru/ru.json
@@ -1836,7 +1836,7 @@
   "pages.condo.analytics.residentsPercent.title": "Доля активных пользователей",
   "pages.condo.buildings.PageTitle": "Объекты",
   "pages.condo.contact.ImportTitle": "жителей",
-  "pages.condo.contact.PageTitle": "Контакты жителей",
+  "pages.condo.contact.PageTitle": "Жители",
   "pages.condo.contact.Verified": "Верифицирован",
   "pages.condo.contact.HasResident": "Приложение жителя",
   "pages.condo.contact.DownloadApp": "скачено",
