fix(condo): DOMA-11691 fix some bugs

--- a/apps/condo/lang/ru/ru.json
+++ b/apps/condo/lang/ru/ru.json
@@ -1839,7 +1839,7 @@
   "pages.condo.contact.PageTitle": "Жители",
   "pages.condo.contact.Verified": "Верифицирован",
   "pages.condo.contact.HasResident": "Приложение жителя",
-  "pages.condo.contact.DownloadApp": "скачено",
+  "pages.condo.contact.DownloadApp": "скачано",
   "pages.condo.e-voting.id.PageTitle": "Онлайн собрание",
   "pages.condo.e-voting.index.CreateEVotingButtonLabel": "Создать новое собрание",
   "pages.condo.e-voting.index.CreateEVotingModalTitle": "Создать новое собрание",
