fix(callcenter): DOMA-11691 add hasResident field to query

--- a/apps/condo/lang/ru/ru.json
+++ b/apps/condo/lang/ru/ru.json
@@ -1014,7 +1014,7 @@
   "excelExport.sheetNames.buildings": "Список домов",
   "excelExport.sheetNames.contacts": "Контакты",
   "excelExport.sheetNames.incidents": "Отключения",
-  "excelExport.sheetNames.recipients": "Получатели",
+  "excelExport.sheetNames.recipients": "Получатели ываорлывлораолвырлоарвыолраолыварывлораолвыраолрывлоаролывраолывроларолвыраолвыроларыволралоралоы",
   "excelExport.sheetNames.propertyScopes": "Области видимости",
   "excelExport.sheetNames.tickets": "Заявки",
   "excelExport.tickets.ticketCommentFilesCount": "файлов",
